--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -94,3 +94,13 @@ hr.content-end-rule {
 code {
   font-size: 0.8em;
 }
+
+.flex-break-row {
+  flex: 0 0 100%;
+  height: 0;
+}
+
+.flex-break-column {
+  flex: 0 0 100%;
+  width: 0;
+}
